feat(AMG-004): ajustes na responsividade da página sobre nos

--- a/src/app/pages/about/components/about-page/about-page.component.html
+++ b/src/app/pages/about/components/about-page/about-page.component.html
@@ -14,59 +14,54 @@
       </p>
     </div>
 
-    <div class="d-flex about--content mt-5">
+    <div class="d-flex about--content pb-5">
+          <div class="box__attr">
+            <img
+              src="../../../../../assets/gifs/completo.gif"
+              alt=""
+              width="70px"
+            />
+            <div class="mx-1 my-1 text__bold">Missão</div>
+            <p class="mx-1 text__desc">
+              Criar, desenvolver e inovar produtos e serviços no âmbito empresarial
+              utilizando a tecnologia da informação, para disponibilizar ao mercado
+              soluções que aumentem a competitividade e a rentabilidade das
+              organizações.
+            </p>
+          </div>
 
-      <div class="d-flex box--content">
-        <div class="box__attr">
-          <img
-            src="../../../../../assets/gifs/completo.gif"
-            alt=""
-            width="70px"
-          />
-          <div class="mx-1 my-1 text__bold">Missão</div>
-          <p class="mx-1 text__desc">
-            Criar, desenvolver e inovar produtos e serviços no âmbito empresarial
-            utilizando a tecnologia da informação, para disponibilizar ao mercado
-            soluções que aumentem a competitividade e a rentabilidade das
-            organizações.
-          </p>
-        </div>
+          <div class="box__attr box__content">
+            <img src="../../../../../assets/gifs/alvo.gif" alt="" width="70px" />
+            <div class="mx-1 my-1 text__bold">Visão</div>
+            <p class="mx-1 text__desc">
+              Ser uma empresa sólida, lucrativa e inovadora, que proporcione
+              qualidade de vida aos colaboradores e promova a transformação da
+              sociedade a partir das novas tecnologias, e a cada ano agregar mais
+              valor aos nossos clientes.
+            </p>
+          </div>
 
-        <div class="box__attr box__content">
-          <img src="../../../../../assets/gifs/alvo.gif" alt="" width="70px" />
-          <div class="mx-1 my-1 text__bold">Visão</div>
-          <p class="mx-1 text__desc">
-            Ser uma empresa sólida, lucrativa e inovadora, que proporcione
-            qualidade de vida aos colaboradores e promova a transformação da
-            sociedade a partir das novas tecnologias, e a cada ano agregar mais
-            valor aos nossos clientes.
-          </p>
-        </div>
-      </div>
+          <div class="box__attr">
+            <img
+              src="../../../../../assets/gifs/lista-de-controle.gif"
+              alt=""
+              width="70px"
+            />
+            <div class="mx-1 my-1 text__bold">Valores</div>
+            <p class="mx-1 text__desc">
+              Honestidade, Espirito de Equipe, Confiança e Credibilidade, Ética,
+              Comprometimento, Inovação
+            </p>
+          </div>
 
-      <div class="d-flex box--content">
-        <div class="box__attr">
-          <img
-            src="../../../../../assets/gifs/lista-de-controle.gif"
-            alt=""
-            width="70px"
-          />
-          <div class="mx-1 my-1 text__bold">Valores</div>
-          <p class="mx-1 text__desc">
-            Honestidade, Espirito de Equipe, Confiança e Credibilidade, Ética,
-            Comprometimento, Inovação
-          </p>
-        </div>
-
-        <div class="box__attr">
-          <img src="../../../../../assets/gifs/foguete.gif" alt="" width="70px" />
-          <div class="mx-1 my-1 text__bold">Propósito</div>
-          <p class="mx-1 text__desc">
-            Nosso propósito, e fazer com que nossas tecnologias tragam resultados
-            para toda sociedade.
-          </p>
-        </div>
-      </div>
+          <div class="box__attr">
+            <img src="../../../../../assets/gifs/foguete.gif" alt="" width="70px" />
+            <div class="mx-1 my-1 text__bold">Propósito</div>
+            <p class="mx-1 text__desc">
+              Nosso propósito, e fazer com que nossas tecnologias tragam resultados
+              para toda sociedade.
+            </p>
+          </div>
 
     </div>
   </div>
