feat(AMG-005): implementa ajustes trabalhe conosco

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,11 @@
     font-size: 38px;
     color: #FFFFFF;
   }
+  &__title-black{
+    font-weight: 600;
+    font-size: 38px;
+    color: #000000;
+  }
   &__subtitle-white{
     font-weight: 400;
     font-size: 38px;
