--- a/src/app/pages/hiring/components/hiring-page/hiring-page.component.html
+++ b/src/app/pages/hiring/components/hiring-page/hiring-page.component.html
@@ -1,6 +1,31 @@
-<div>
-  <div>
-    <!--BANNER COM TEXTOS-->
+<div class="pag">
+  <div class="aling__top mb-5">
+    <div class="pag__center">
+      <div class="d-flex flex-column">
+        <p class="text__bold mb-5">
+          Inicio / Trabalhe conosco
+        </p>
+        <p class="text__title-black mt-5 mb-3">
+          Mostre suas <br>
+          habilidades como <br>
+          para o mundo.
+        </p>
+        <p class="text__default">
+          Faça parte desse time que só vem crescendo, <br>
+          estamos esperando por você.
+        </p>
+        <app-default-button
+        class="btn--contact"
+        routerLink="/contato"
+        [arrow]="false"
+        [label]="'Vagas disponíveis'"
+        [classes]="'py-3 px-3 h3 my-4'"
+      >
+      <img src="../../../../../assets/icons/arrow-button.svg" alt=""
+      width="16px">
+      </app-default-button>
+      </div>
+    </div>
   </div>
 
 
