--- a/src/app/pages/hiring/components/hiring-page/hiring-page.component.scss
+++ b/src/app/pages/hiring/components/hiring-page/hiring-page.component.scss
@@ -17,3 +17,13 @@
     }
   }
 }
+.aling{
+  &__top{
+    width: 100%;
+    height: 100%;
+    padding: 25px 0px 160px 0px;
+    background-image: url(../../../../../assets/backgrounds/bg-work.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
