--- a/src/app/pages/solutions/components/solutions-page/solutions-page.component.html
+++ b/src/app/pages/solutions/components/solutions-page/solutions-page.component.html
@@ -1,19 +1,20 @@
 <div class="pag">
-  <div class="pag__center d-flex">
+  <h5 class="text__bold default-container">inicio / soluções</h5>
+  <div class="pag__center d-flex section--first py-5">
     <img
       src="assets/backgrounds/bg-solution.png"
       alt="bg-solutions"
       width="50%"
     />
     <div class="w-50 aling__solutions">
-      <p class="text__green-title mx-4">
-        Precisando de <br />
-        desenvolvedores, ou de <br />
+      <h3 class="text__green-title ">
+        Precisando de
+        desenvolvedores, ou de
         squads para seu produto?
-      </p>
-      <p class="text__green-subtitle mt-5 mx-4">
-        Montamos um time de acordo com sua <br />
-        necessidade, seguindo a melhor forma <br />
+      </h3>
+      <p class="text__green-subtitle mt-5 ">
+        Montamos um time de acordo com sua
+        necessidade, seguindo a melhor forma
         ágil de trabalhar.
       </p>
       <app-default-button
@@ -21,31 +22,31 @@
         routerLink="/contato"
         [arrow]="false"
         [label]="'Fale com um especialista'"
-        [classes]="'py-3 px-3 h3 button__solution mx-4'"
+        [classes]="'py-3 px-3 h3 button__solution '"
       >
       </app-default-button>
     </div>
   </div>
 
-  <div class="pag__center">
+  <div class="pag w-100">
     <div class="w-100" style="background-color: #587b52; height: 52px"></div>
   </div>
 
-  <div class="pag__center d-flex">
-    <div class="w-50 aling__solutions">
+  <div class="pag__center d-flex section--second py-5">
+    <div class="w-50 aling__solutions mr-4">
       <img
         src="assets/backgrounds/bg-solu-mid.svg"
         alt="bg-solu-mid"
         width="100%"
       />
     </div>
-    <div class="w-50">
-      <p class="text__green-title mt-3 mx-4">
-        Por que escolher uma <br />
-        squad ágil para seu <br />
+    <div class="w-50 aling__texts">
+      <h3 class="text__green-title mt-3">
+        Por que escolher uma
+        squad ágil para seu
         projeto?
-      </p>
-      <p class="mt-1 mx-4 w-75 text__solution">
+      </h3>
+      <p class="mt-1 text__solution">
         Seguir um modelo de trabalho mais utilizado hoje em desenvolvimento de
         software na área de tecnologia, é a metodologia agil, seguindo o fluxo
         de serviço conforme a imagem. Na AMG, você define a sua equipe, conforme
@@ -56,11 +57,11 @@
     </div>
   </div>
 
-  <div class="pag__center" style="background-color: #587b52">
+  <div class="pag w-100 section--third" style="background-color: #587b52">
     <div
-      class="aling__box d-flex justify-content-center align-items-center flex-column"
+      class="aling__box d-flex justify-content-center align-items-center flex-column default-container"
     >
-      <p class="text__title">
+      <p class="text__title text-center default-container">
         Seus projetos com produtividade, agilidade e redução de custos.
       </p>
       <app-default-button
@@ -74,7 +75,7 @@
     </div>
   </div>
 
-  <div class="pag__center d-flex">
+  <div class="pag__center d-flex section--fourth">
     <div class="aling__bot">
       <p class="text__green-title">Por quê contratar pela AMG?</p>
       <p class="text__solution">
