feat(AMG-002): alterações e refinamentos

--- a/src/app/pages/about/components/about-page/about-page.component.html
+++ b/src/app/pages/about/components/about-page/about-page.component.html
@@ -1,6 +1,6 @@
 <div class="pag">
   <div class="pag__center">
-    <p class="text__bold">inicio / sobre nós</p>
+    <p class="text__bold">início / sobre nós</p>
     <div class="d-flex text-center flex-column">
       <p class="text__green mt-3 mb-3">Sobre nós</p>
       <p class="text__opc-title">
