--- a/src/app/pages/home/components/home-page/home-page.component.html
+++ b/src/app/pages/home/components/home-page/home-page.component.html
@@ -68,7 +68,7 @@
     </div>
   </div>
 
-  <div class="aling__bot section--third">
+  <div class="aling__bot section--third pb-5">
     <div class="pag__center section--third--content">
       <p class="text__green">Sustentabilidade</p>
       <p class="text__default">Algumas iniciativas:</p>
