--- a/src/app/pages/contact/components/contact-page/contact-page.component.html
+++ b/src/app/pages/contact/components/contact-page/contact-page.component.html
@@ -1,5 +1,5 @@
 <div class="pt-3">
-  <p class="text__bold default-container">inicio / sobre nós</p>
+  <p class="text__bold default-container">início / sobre nós</p>
   <div class="default-container mx-auto py-5 d-flex content">
     <div class="w-50 content--form py-3">
       <h3 class="text__green">Contato</h3>
