--- a/src/app/pages/hiring/components/hiring-page/hiring-page.component.html
+++ b/src/app/pages/hiring/components/hiring-page/hiring-page.component.html
@@ -1,10 +1,10 @@
 <div class="pag">
   <div class="aling__top mb-5">
+    <p class="text__bold mb-5 default-container">
+      início / trabalhe conosco
+    </p>
     <div class="pag__center">
       <div class="d-flex flex-column">
-        <p class="text__bold mb-5">
-          Inicio / Trabalhe conosco
-        </p>
         <p class="text__title-black mt-5 mb-3">
           Mostre suas <br>
           habilidades como <br>
@@ -16,6 +16,7 @@
         </p>
         <app-default-button
         class="btn--contact"
+        (click)="defaultService.backToTop()"
         routerLink="/contato"
         [arrow]="false"
         [label]="'Vagas disponíveis'"
