--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -2,7 +2,7 @@
 
     <div class="menu--top bg-dark py-2">
       <nav class="default-container d-flex justify-content-between">
-        <div class="hover-underline-animation py-1" *ngFor="let item of menu"
+        <div class="hover-underline-animation py-1" *ngFor="let item of menu" data-aos="fade-up"
         routerLink="{{item.route}}"
         (click)="defaultService.backToTop()">
           {{item.name}}
@@ -12,8 +12,9 @@
 
     <div class="py-3 menu--center">
       <div class="default-container d-flex justify-content-between align-items-center">
-        <img src="../../../../assets/svg/LOGO 4.svg" alt="amg" routerLink="/home">
+        <img src="../../../../assets/svg/LOGO 4.svg" data-aos="fade-up" alt="amg" routerLink="/home">
         <app-default-button
+        data-aos="fade-up"
         class="btn--contact"
         (click)="defaultService.backToTop()"
         routerLink="/contato"
@@ -26,6 +27,6 @@
     </div>
 
   <div class="menu--bottom bg-dark">
-    <span class="text-white d-flex justify-content-center py-1 text-center default-container">Todos os direitos reservados ANGULAR MONEY GROUP &copy; {{year}}.</span>
+    <span class="text-white d-flex justify-content-center py-1 text-center default-container" data-aos="fade-up">Todos os direitos reservados ANGULAR MONEY GROUP &copy; {{year}}.</span>
   </div>
 </footer>
