feat(AMG-002): implementação das váriáveis root css

--- a/src/app/shared/components/message-status/message-status.component.scss
+++ b/src/app/shared/components/message-status/message-status.component.scss
@@ -1,6 +1,6 @@
 .success{
   &--box{
-    background-color: white;
+    background-color: var(--white);
     z-index: 10;
     position: fixed;
     right: 1.5%;
