--- a/src/app/pages/home/components/home-page/home-page.component.scss
+++ b/src/app/pages/home/components/home-page/home-page.component.scss
@@ -19,13 +19,13 @@
   &__center{
     width: 100%;
     padding: 86px 0;
-    background-color: #F6F6F6;
+    background-color: var(--white-gray);
     display: flex;
   }
   &__call{
     width: 100%;
     padding: 138px 0;
-    background-color:#F6F6F6;
+    background-color:var(--white-gray);
     background-repeat: no-repeat;
     background-image: url(../../../../../assets/backgrounds/bg-call.svg);
     background-size: cover;
@@ -34,13 +34,13 @@
     width: 100%;
     padding-top: 140px;
     padding-bottom: 30px;
-    background-color:#F6F6F6;
+    background-color:var(--white-gray);
   }
 }
 
 .box{
   &__white{
-    background-color: #ffff;
+    background-color: var(--white);
     width: 33%;
     margin-right: 30px;
     padding: 13px;
@@ -52,7 +52,7 @@
     width: 50%;
     margin-right: 30px;
     padding: 15px;
-    background: #FFFFFF;
+    background: var(--white);
     border: 1px solid #EEEEEE;
     box-shadow: 0px 0px 54px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
