--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,8 +7,13 @@
   /*buttons colors*/
   --black: #000000;
   --white: #ffffff;
+  --white--gray: #F6F6F6;
   --gray: #f5f5f5;
   --green: #587b52;
+  --dark-green: #354739;
+  --medium-green: #3A5237;
+  --dark-gray: #545454;
+  --very-dark-gray: #262626;
   /*fonts*/
 }
 
@@ -29,72 +34,72 @@
   &__title{
     font-weight: 600;
     font-size: 38px;
-    color: #FFFFFF;
+    color: var(--white);
   }
   &__title-black{
     font-weight: 600;
     font-size: 38px;
-    color: #000000;
+    color: var(--black);
   }
   &__subtitle-white{
     font-weight: 400;
     font-size: 38px;
-    color: #FFFFFF;
+    color: var(--white);
   }
   &__white-desc{
     font-weight: 400;
     font-size: 24px;
-    color: #FFFFFF;
+    color: var(--white);
   }
   &__default{
     font-weight: 400;
     font-size: 26px;
-    color: #000000;
+    color: var(--black);
   }
   &__subtitle{
     font-weight: 400;
     font-size: 24px;
-    color: #545454;
+    color: var(--dark-gray);
   }
   &__desc{
     font-weight: 400;
     font-size: 16px;
-    color: #545454;
+    color: var(--dark-gray);
   }
   &__bold{
     font-weight: 600;
     font-size: 22px;
-    color: #000000;
+    color: var(--black);
   }
   &__opc-title{
     font-weight: 600;
     font-size: 28px;
-    color: #3A5237;
+    color: var(--medium-green);
   }
   &__green{
     font-weight: 600;
     font-size: 24px;
-    color: #587B52;
+    color: var(--green);
   }
   &__green-title{
     font-weight: 600;
     font-size: 42px;
-    color: #587B52;
+    color: var(--green);
   }
   &__green-subtitle{
     font-weight: 400;
     font-size: 24px;
-    color: #587B52;
+    color: var(--green);
   }
   &__solution{
     font-weight: 400;
     font-size: 20px;
-    color: #262626;
+    color: var(--very-dark-gray);
   }
 }
 
 .default-subtitle.tittle{
-  color: #3A5237 !important;
+  color: var(--medium-green) !important;
   font-weight: 600 !important;
   font-size: 21px !important;
 }
@@ -109,7 +114,7 @@
   }
 }
 .default-subtitle.tittle{
-  color: #3A5237 !important;
+  color: var(--medium-green) !important;
   font-weight: 600 !important;
   font-size: 21px !important;
 }
