feat(AMG-002): estruturação baseada em boas práticas

--- a/src/app/core/modules/hiring/components/hiring-page/hiring-page.component.html
+++ b/src/app/core/modules/hiring/components/hiring-page/hiring-page.component.html
@@ -23,7 +23,7 @@
         [label]="'Vagas disponíveis'"
         [classes]="'py-3 px-3 h3 my-4'"
       >
-      <img src="../../../../../assets/icons/arrow-button.svg" data-aos="fade-up" alt=""
+      <img src="../../../../../../assets/icons/" data-aos="fade-up" alt=""
       width="16px">
       </app-default-button>
       </div>
