feat(AMG-002): componentização das seções de todas as páginas

--- a/src/app/core/modules/about/components/about-page/about-page.component.html
+++ b/src/app/core/modules/about/components/about-page/about-page.component.html
@@ -1,70 +1,10 @@
 <div class="pag">
   <div class="pag__center">
     <p class="text__bold" data-aos="fade-up">início / sobre nós</p>
-    <div class="d-flex text-center flex-column">
-      <p class="text__green mt-3 mb-3" data-aos="fade-up">Sobre nós</p>
-      <p class="text__opc-title" data-aos="fade-up">
-        Fundada em 2019, a Angular Money Group é uma empresa voltada á
-        desenvolvimento de website e aplicativos. Tendo como seu principal carro
-        chefe o front end no framework angular.
-      </p>
-      <p class="text__subtitle" data-aos="fade-up">
-        Atualmente, somos uma equipe com mais de 20 desenvolvedores, com sede em
-        Uberlândia, atendemos clientes em todo o país, e também internacionais.
-      </p>
-    </div>
 
-    <div class="d-flex about--content pb-5">
-          <div class="box__attr">
-            <img
-            data-aos="fade-up"
-              src="../../../../../assets/gifs/completo.gif"
-              alt=""
-              width="70px"
-            />
-            <div class="mx-1 my-1 text__bold" data-aos="fade-up">Missão</div>
-            <p class="mx-1 text__desc" data-aos="fade-up">
-              Criar, desenvolver e inovar produtos e serviços no âmbito empresarial
-              utilizando a tecnologia da informação, para disponibilizar ao mercado
-              soluções que aumentem a competitividade e a rentabilidade das
-              organizações.
-            </p>
-          </div>
+    <app-about-page-we></app-about-page-we>
 
-          <div class="box__attr box__content">
-            <img src="../../../../../assets/gifs/alvo.gif" alt="" width="70px" data-aos="fade-up" />
-            <div class="mx-1 my-1 text__bold" data-aos="fade-up">Visão</div>
-            <p class="mx-1 text__desc" data-aos="fade-up">
-              Ser uma empresa sólida, lucrativa e inovadora, que proporcione
-              qualidade de vida aos colaboradores e promova a transformação da
-              sociedade a partir das novas tecnologias, e a cada ano agregar mais
-              valor aos nossos clientes.
-            </p>
-          </div>
+    <app-about-page-virtue></app-about-page-virtue>
 
-          <div class="box__attr">
-            <img
-            data-aos="fade-up"
-              src="../../../../../assets/gifs/lista-de-controle.gif"
-              alt=""
-              width="70px"
-            />
-            <div class="mx-1 my-1 text__bold">Valores</div>
-            <p class="mx-1 text__desc" data-aos="fade-up">
-              Honestidade, Espirito de Equipe, Confiança e Credibilidade, Ética,
-              Comprometimento, Inovação
-            </p>
-          </div>
-
-          <div class="box__attr">
-            <img src="../../../../../assets/gifs/foguete.gif" alt="" width="70px" data-aos="fade-up" />
-            <div class="mx-1 my-1 text__bold" data-aos="fade-up">Propósito</div>
-            <p class="mx-1 text__desc" data-aos="fade-up">
-              Nosso propósito, e fazer com que nossas tecnologias tragam resultados
-              para toda sociedade.
-            </p>
-          </div>
-
-    </div>
   </div>
 </div>
