feat(AMG-002): refinamentos e adição dos botões da home

--- a/src/app/core/modules/home/components/home-page-initial/home-page-initial.component.scss
+++ b/src/app/core/modules/home/components/home-page-initial/home-page-initial.component.scss
@@ -15,6 +15,7 @@
     background-image: url('/assets/backgrounds/bg-top.svg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: 80% 40%;
   }
   &__center{
     width: 100%;
@@ -104,4 +105,3 @@
     }
   }
 }
-
