--- a/src/app/shared/layout/message-status/message-status.component.html
+++ b/src/app/shared/layout/message-status/message-status.component.html
@@ -1,4 +1,4 @@
-<div class="success--box rounded d-flex p-2" *ngIf="showMessage"
+<div class="success--box rounded d-flex p-2" *ngIf="showMessage" data-aos="fade-left"
 [ngStyle]="{'border-left':formatColorMessage(type)}"
 >
   <div class="d-flex justify-content-center align-items-center p-2">
