--- a/src/app/core/modules/hiring/components/hiring-page-curriculum/hiring-page-curriculum.component.html
+++ b/src/app/core/modules/hiring/components/hiring-page-curriculum/hiring-page-curriculum.component.html
@@ -1,6 +1,6 @@
 <div class="default-container d-flex py-5">
 
-  <div class="w-50 curriculum--form" data-aos="fade-up">
+  <div class="w-50 curriculum--form">
     <div class="default-container">
       <div class="w-100 p-3">
         <h4 class="text-center">Envie seu currículo</h4>
