--- a/src/app/core/modules/home/components/home-page-hiring/home-page-hiring.component.html
+++ b/src/app/core/modules/home/components/home-page-hiring/home-page-hiring.component.html
@@ -2,7 +2,7 @@
   <div class="pag__center section--second--content">
     <p class="text__green" data-aos="fade-up">Trabalhe conosco</p>
 
-    <div class="d-flex" data-aos="fade-up">
+    <div class="d-flex pb-4" data-aos="fade-up">
       <div class="box__white" data-aos="fade-up">
         <img src="assets/icons/icon-call-1.svg" width="48px"data-aos="fade-up" />
         <p class="text__default mt-2" data-aos="fade-up">Potencial de crescimento.</p>
@@ -30,5 +30,10 @@
         </p>
       </div>
     </div>
+
+    <app-default-button
+    label="Vagas disponíveis"
+    [arrow]="true"
+    routerLink="/trabalhe-conosco"></app-default-button>
   </div>
 </div>
