--- a/src/app/core/modules/home/components/home-page-initial/home-page-initial.component.html
+++ b/src/app/core/modules/home/components/home-page-initial/home-page-initial.component.html
@@ -11,6 +11,12 @@
       <p class="text__white-desc" data-aos="fade-up">
         Conectamos sua empresa com o mundo da tecnologia em tempo hábil
       </p>
+      <app-default-button
+      [bigArrow]="true"
+      label="Entrar em contato"
+      classes="py-3 px-4"
+      labelFontSize="20px"
+      routerLink="/contato"></app-default-button>
     </div>
   </div>
 </div>
