--- a/src/app/shared/components/curriculum-form/curriculum-form.component.html
+++ b/src/app/shared/components/curriculum-form/curriculum-form.component.html
@@ -1,4 +1,4 @@
-<form class="w-100" [formGroup]="curriculumForm">
+<form class="w-100" [formGroup]="curriculumForm" data-aos="fade-up">
 
   <div>
     <input type="email" class=" w-100" placeholder="*Nome" formControlName="name">
