--- a/src/app/core/modules/home/components/home-page/home-page.component.scss
+++ b/src/app/core/modules/home/components/home-page/home-page.component.scss
@@ -66,7 +66,6 @@
     background-image: url('/assets/backgrounds/bg-mid.png');
   }
 }
-
 @media (max-width:950px){
   .section{
     &--first{
@@ -95,6 +94,18 @@
       &--content{
         width: 75% !important;
         margin: 0 auto;
+      }
+        div{
+          width: 100%;
+          flex-direction: column;
+          gap: 40px;
+        }
+    }
+    &--forth{
+      &--content{
+        width: 75% !important;
+        margin: 0 auto;
+
       }
         div{
           width: 100%;
