--- a/src/app/core/modules/home/components/home-page-initial/home-page-initial.component.html
+++ b/src/app/core/modules/home/components/home-page-initial/home-page-initial.component.html
@@ -15,6 +15,7 @@
       [bigArrow]="true"
       label="Entrar em contato"
       classes="py-3 px-4"
+      (click)="defaultService.backToTop()"
       labelFontSize="20px"
       routerLink="/contato"></app-default-button>
     </div>
