--- a/src/app/core/modules/home/components/home-page-we-are/home-page-we-are.component.html
+++ b/src/app/core/modules/home/components/home-page-we-are/home-page-we-are.component.html
@@ -14,6 +14,7 @@
       label="Sobre nós"
       [arrow]="true"
       routerLink="/sobre"
+      (click)="defaultService.backToTop()"
       ></app-default-button>
     </div>
     <img src="assets/backgrounds/bg-mid.png" alt="" width="50%" data-aos="fade-up"/>
