--- a/src/app/core/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.html
+++ b/src/app/core/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.html
@@ -6,24 +6,19 @@
   <div class="pag__center">
     <div class="d-flex flex-column">
       <p class="text__title-black mt-5 mb-3" data-aos="fade-up">
-        Mostre suas <br>
-        habilidades como <br>
-        para o mundo.
+        O seu futuro está aqui.
       </p>
       <p class="text__default" data-aos="fade-up">
         Faça parte desse time que só vem crescendo, <br>
         estamos esperando por você.
       </p>
       <app-default-button
-      data-aos="fade-up"
-      class="btn--contact"
+      [bigArrow]="true"
+      label="Vagas disponíveis"
+      classes="py-3 px-4"
       (click)="defaultService.backToTop()"
-      routerLink="/contato"
-      [arrow]="false"
-      [label]="'Vagas disponíveis'"
-      [classes]="'py-3 px-3 h3 my-4'"
-    >
-    </app-default-button>
+      labelFontSize="20px"
+      routerLink="/contato"></app-default-button>
     </div>
   </div>
 </div>
