--- a/src/app/core/modules/home/components/home-page-sustainability/home-page-sustainability.component.html
+++ b/src/app/core/modules/home/components/home-page-sustainability/home-page-sustainability.component.html
@@ -2,8 +2,8 @@
   <div class="pag__center section--third--content">
     <p class="text__green" data-aos="fade-up">Sustentabilidade</p>
     <p class="text__default" data-aos="fade-up">Algumas iniciativas:</p>
-    <div class="d-flex">
-      <div class="box__bot" data-aos="fade-up">
+    <div class="d-flex gap-3">
+      <div class="box__bot m-0" data-aos="fade-up">
         <img
           data-aos="fade-up"
           src="assets/backgrounds/bg-agua.svg"
@@ -17,7 +17,7 @@
         </p>
       </div>
 
-      <div class="box__bot" data-aos="fade-up">
+      <div class="box__bot m-0" data-aos="fade-up">
         <img
           src="assets/backgrounds/bg-talk.svg"
           alt=""
