--- a/src/app/core/modules/solutions/components/solutions-page-your-projects/solutions-page-your-projects.component.html
+++ b/src/app/core/modules/solutions/components/solutions-page-your-projects/solutions-page-your-projects.component.html
@@ -5,15 +5,13 @@
     <p class="text__title text-center default-container pb-4" data-aos="fade-up">
       Seus projetos com produtividade, agilidade e redução de custos.
     </p>
-    <app-default-button
-      data-aos="fade-up"
+       <app-default-button
+      [bigArrow]="false"
+      label="Vagas disponíveis"
+      classes="button-white py-3 px-4"
       (click)="defaultService.backToTop()"
-      class="btn--contact"
-      routerLink="/contato"
-      [arrow]="false"
-      [label]="'Fale com um especialista'"
-      [classes]="'py-3 px-3 h3 button__solution button-white'"
-    >
-    </app-default-button>
+      labelFontSize="20px"
+      routerLink="/contato"></app-default-button>
+
   </div>
 </div>
