feat(AMG-002): ajuste de botão

--- a/src/app/core/modules/solutions/components/solutions-page-your-projects/solutions-page-your-projects.component.html
+++ b/src/app/core/modules/solutions/components/solutions-page-your-projects/solutions-page-your-projects.component.html
@@ -7,7 +7,7 @@
     </p>
        <app-default-button
       [bigArrow]="false"
-      label="Vagas disponíveis"
+      label="Fale com especialista"
       classes="button-white py-3 px-4"
       (click)="defaultService.backToTop()"
       labelFontSize="20px"
