--- a/src/app/core/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.scss
+++ b/src/app/core/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.scss
@@ -8,3 +8,14 @@
     background-repeat: no-repeat;
   }
 }
+.modal {
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px #333;
+  min-width: 320px;
+  position: fixed;
+  left: 50%;
+  padding: 24px;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
