feat(AMG-002): integracao com o serviço de contato

--- a/src/app/core/modules/hiring/components/hiring-page-curriculum/hiring-page-curriculum.component.html
+++ b/src/app/core/modules/hiring/components/hiring-page-curriculum/hiring-page-curriculum.component.html
@@ -6,7 +6,7 @@
         <h4 class="text-center">Envie seu currículo</h4>
       </div>
       <div>
-        <h5>Mande suas dúvidas, portfólios e ideias.</h5>
+        <h5>Mande suas dúvidas, portfólios e idéias.</h5>
       </div>
       <div>
         <app-curriculum-form></app-curriculum-form>
