--- a/src/app/shared/components/contact-form/contact-form.component.html
+++ b/src/app/shared/components/contact-form/contact-form.component.html
@@ -1,26 +1,44 @@
-<form class="w-100" [formGroup]="contactForm">
+<form class="w-100" [formGroup]="form">
 
   <div>
     <input type="email" class="rounded w-100" placeholder="*email@seudominio.com.br" formControlName="email">
     <div class="validation--box d-flex align-items-center ">
-      <span class="text-danger" *ngIf="email.invalid && submitted">*E-mail inválido</span>
+      <span class="text-danger"  *ngIf="
+      form.get('email')?.errors?.['required']  && submitted
+    ">*Por favor, informe seu email</span>
+      <span class="text-danger"  *ngIf="
+      form.get('email')?.errors?.['email'] && submitted &&
+      (form.get('email')?.touched || form.get('email')?.dirty)
+    ">*E-mail inválido</span>
     </div>
   </div>
 
   <div>
-    <input type="tel" class="rounded w-100" placeholder="*(00) 00000-0000" mask="(00) 00000-0000" formControlName="phoneNumber">
+    <input type="tel" class="rounded w-100" placeholder="*(00) 00000-0000" mask="(00) 00000-0000" maxlength="15" formControlName="phone">
     <div class="validation--box d-flex align-items-center ">
-      <span class="text-danger" *ngIf="phoneNumber.invalid && submitted">*Número inválido</span>
+      <span class="text-danger"  *ngIf="
+      form.get('phone')?.errors?.['required']  && submitted
+    ">*Por favor, informe seu número</span>
+      <span class="text-danger"  *ngIf="
+      form.get('phone')?.errors?.['minlenght'] && submitted &&
+      (form.get('phone')?.touched || form.get('phone')?.dirty)
+    ">*Número inválido</span>
     </div>
   </div>
 
   <div>
     <textarea name="" id="" cols="20" rows="10" maxlength="300" class="rounded w-100" placeholder="Descreva aqui sua mensagem..." formControlName="message"></textarea>
+    <div class="validation--box d-flex align-items-center ">
+      <span class="text-danger"  *ngIf="
+      form.get('message')?.errors?.['required']  && submitted
+    ">*Por favor, digite uma mensagem</span>
+    </div>
+
   </div>
 
   <div class="d-flex justify-content-end pt-3 btn--submit">
     <app-default-button
-      (click)="sendForm(contactForm)"
+      (click)="sendForm(form)"
       [arrow]="true"
       [label]="'Entrar em contato'"
       [loading]="loadingSubmit"
@@ -30,9 +48,8 @@
 </form>
 
 <app-message-status
-  [showMessage]="showMessage"
-  [text]="'Mensagem enviada com sucesso!'"
-  [title]="'Enviado'"
-  [type]="'success'"
-  (modalClosed)="showMessage = false"
+  [openMessage]="openMessage.asObservable()"
+  [text]="modalMessage.text"
+  [title]="modalMessage.title"
+  [type]="modalMessage.type"
 ></app-message-status>
