--- a/src/app/shared/layout/message-status/message-status.component.html
+++ b/src/app/shared/layout/message-status/message-status.component.html
@@ -14,7 +14,7 @@
       {{text}}
     </div>
   </div>
-  <div class="d-flex justify-content-center align-items-center p-2 success--box--close" (click)="closeMessage()">
+  <div class="d-flex justify-content-center align-items-center p-2 success--box--close" (click)="showMessage = !showMessage">
     Fechar
   </div>
 </div>
