--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Albert+Sans&family=Syne&display=swap');
-
+@import '~bootstrap/dist/css/bootstrap.min.css';
 :root {
   /*principal colors*/
   --primary-color: #354739;
