feat(AMG-002): finalização da integração com o serviço de contato e correção do botão

--- a/src/app/shared/components/curriculum-form/curriculum-form.component.html
+++ b/src/app/shared/components/curriculum-form/curriculum-form.component.html
@@ -75,6 +75,7 @@
       type="file"
       class="file"
       (change)="onFilechange($event)"
+      accept=".pdf"
     />
     <div
       class="validation--box d-flex align-items-center justify-content-start"
