feat(AMG-002): criação dos componentes default-modal e default-carousel

--- a/src/app/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.html
+++ b/src/app/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.html
@@ -16,9 +16,8 @@
       [bigArrow]="true"
       label="Vagas disponíveis"
       classes="py-3 px-4"
-      (click)="defaultService.backToTop()"
-      labelFontSize="20px"
-      routerLink="/contato"></app-default-button>
+      (click)="goToCurriculumEvent.emit()"
+      labelFontSize="20px"></app-default-button>
     </div>
   </div>
 </div>
