--- a/src/app/modules/hiring/components/hiring-page-curriculum/hiring-page-curriculum.component.html
+++ b/src/app/modules/hiring/components/hiring-page-curriculum/hiring-page-curriculum.component.html
@@ -1,5 +1,4 @@
-<div class="default-container d-flex py-5">
-
+<div #curriculumForm id="curriculumForm" class="default-container d-flex py-5">
   <div class="w-50 curriculum--form">
     <div class="default-container">
       <div class="w-100 p-3">
