--- a/src/app/modules/home/components/home-page-suggestion/home-page-suggestion.component.html
+++ b/src/app/modules/home/components/home-page-suggestion/home-page-suggestion.component.html
@@ -1,5 +1,4 @@
 <div class="aling__center section--forth bg-white py-5" data-aos="fade-up">
-
   <div class="pag__center d-flex section--forth--content p-5 rounded-3" style="background-color:#EEEEEE;">
     <div class="d-flex text-center justify-content-center flex-column w-100">
       <p class="text__green" data-aos="fade-up">Por meio do menu abaixo você pode fazer seu relato ou sua sugestão. </p>
@@ -7,11 +6,11 @@
         Ainda, você pode utilizá-lo para obter mais informações, inclusive sobre a Contato Seguro, empresa que faz a gestão deste canal, garantindo seu anonimato.
       </p>
       <div>
-        <textarea name="" id="" cols="20" rows="10" maxlength="300" class="rounded w-100 bg-white" placeholder="Descreva aqui sua mensagem..." formControlName="message"></textarea>
+        <textarea name="" id="" cols="20" rows="10" minlength="20" maxlength="300" class="rounded w-100 bg-white" placeholder="Descreva aqui sua mensagem..." formControlName="message"></textarea>
       </div>
 
       <div class="d-flex justify-content-end pt-3 btn--submit">
-        <app-default-button
+         <app-default-button
           [arrow]="true"
           [label]="'Enviar'"
           [loading]="loadingSubmit"
