--- a/src/app/modules/hiring/components/hiring-page-curriculum/hiring-page-curriculum.component.html
+++ b/src/app/modules/hiring/components/hiring-page-curriculum/hiring-page-curriculum.component.html
@@ -15,6 +15,6 @@
   </div>
 
   <div class="w-50 d-flex align-items-center curriculum--img" data-aos="fade-up">
-    <img src="../../../../../../assets/backgrounds/hiring-image.jpg" width="100%" alt="">
+    <img src="/src/assets/backgrounds/hiring-image.jpg" width="100%" alt="">
   </div>
 </div>
