feat(AMG-002): ajustes de impotação, e integração com formulário anônimo de mensagem

--- a/src/app/modules/about/components/about-page-virtue/about-page-virtue.component.html
+++ b/src/app/modules/about/components/about-page-virtue/about-page-virtue.component.html
@@ -2,7 +2,7 @@
   <div class="box__attr">
     <img
     data-aos="fade-up"
-      src="/src/assets/gifs/completo.gif"
+      src="src/assets/gifs/completo.gif"
       alt=""
       width="70px"
     />
@@ -16,7 +16,7 @@
   </div>
 
   <div class="box__attr">
-    <img src="/src/assets/gifs/alvo.gif" alt="" width="70px" data-aos="fade-up" />
+    <img src="src/assets/gifs/alvo.gif" alt="" width="70px" data-aos="fade-up" />
     <div class="mx-1 my-1 text__bold" data-aos="fade-up">Visão</div>
     <p class="mx-1 text__desc" data-aos="fade-up">
       Ser uma empresa sólida, lucrativa e inovadora, que proporcione
@@ -29,7 +29,7 @@
   <div class="box__attr">
     <img
     data-aos="fade-up"
-      src="/src/assets/gifs/lista-de-controle.gif"
+      src="src/assets/gifs/lista-de-controle.gif"
       alt=""
       width="70px"
     />
@@ -41,7 +41,7 @@
   </div>
 
   <div class="box__attr">
-    <img src="/src/assets/gifs/foguete.gif" alt="" width="70px" data-aos="fade-up" />
+    <img src="src/assets/gifs/foguete.gif" alt="" width="70px" data-aos="fade-up" />
     <div class="mx-1 my-1 text__bold" data-aos="fade-up">Propósito</div>
     <p class="mx-1 text__desc" data-aos="fade-up">
       Nosso propósito, e fazer com que nossas tecnologias tragam resultados
@@ -51,4 +51,4 @@
 
 </div>
 
-<app-default-carousel></app-default-carousel>
+<!-- <app-default-carousel></app-default-carousel> -->
