--- a/src/app/modules/home/components/home-page-suggestion/home-page-suggestion.component.html
+++ b/src/app/modules/home/components/home-page-suggestion/home-page-suggestion.component.html
@@ -6,7 +6,10 @@
         Ainda, você pode utilizá-lo para obter mais informações, inclusive sobre a Contato Seguro, empresa que faz a gestão deste canal, garantindo seu anonimato.
       </p>
       <div>
-        <textarea name="" id="" cols="20" rows="10" minlength="20" maxlength="300" class="rounded w-100 bg-white" placeholder="Descreva aqui sua mensagem..." formControlName="message"></textarea>
+        <textarea name="" id="" cols="20" rows="10" maxlength="300" class="rounded w-100 bg-white" placeholder="Descreva aqui sua mensagem..." [(ngModel)]="message"></textarea>
+      </div>
+      <div class="w-100 d-flex ">
+        <span *ngIf="submitted && !message" class="text-danger">Por favor, digite uma mensagem</span>
       </div>
 
       <div class="d-flex justify-content-end pt-3 btn--submit">
@@ -14,6 +17,7 @@
           [arrow]="true"
           [label]="'Enviar'"
           [loading]="loadingSubmit"
+          (click)="sendMessage()"
         ></app-default-button>
       </div>
 
@@ -21,3 +25,10 @@
 
   </div>
 </div>
+
+<app-message-status
+  [openMessage]="openMessage.asObservable()"
+  [text]="modalMessage.text"
+  [title]="modalMessage.title"
+  [type]="modalMessage.type"
+></app-message-status>
