--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -12,7 +12,7 @@
 
     <div class="py-3 menu--center">
       <div class="default-container d-flex justify-content-between align-items-center">
-        <img src="src/assets/svg/LOGO 4.svg" data-aos="fade-up" alt="amg" routerLink="/home">
+        <img src="assets/svg/LOGO 4.svg" data-aos="fade-up" alt="amg" routerLink="/home">
         <app-default-button
         data-aos="fade-up"
         class="btn--contact"
