--- a/src/app/modules/about/components/about-page-virtue/about-page-virtue.component.html
+++ b/src/app/modules/about/components/about-page-virtue/about-page-virtue.component.html
@@ -8,10 +8,9 @@
     />
     <div class="mx-1 my-1 text__bold" data-aos="fade-up">Missão</div>
     <p class="mx-1 text__desc" data-aos="fade-up">
-      Criar, desenvolver e inovar produtos e serviços no âmbito empresarial
-      utilizando a tecnologia da informação, para disponibilizar ao mercado
-      soluções que aumentem a competitividade e a rentabilidade das
-      organizações.
+      Utilizar a tecnologia da informação para criar,
+      desenvolver e atualizar produtos e serviços no ambiente de negócios,
+      trazendo ao mercado soluções que aumentam a competitividade e lucratividade de nossas organizações.
     </p>
   </div>
 
@@ -19,10 +18,10 @@
     <img src="assets/gifs/alvo.gif" alt="" width="70px" data-aos="fade-up" />
     <div class="mx-1 my-1 text__bold" data-aos="fade-up">Visão</div>
     <p class="mx-1 text__desc" data-aos="fade-up">
-      Ser uma empresa sólida, lucrativa e inovadora, que proporcione
-      qualidade de vida aos colaboradores e promova a transformação da
-      sociedade a partir das novas tecnologias, e a cada ano agregar mais
-      valor aos nossos clientes.
+      Crescer como uma empresa rentável e inovadora,
+      que oferece qualidade de vida aos colaboradores e
+      promove a mudança da sociedade com base nas novas tecnologias
+      e que a cada ano agrega valor aos seus clientes.
     </p>
   </div>
 
@@ -44,8 +43,7 @@
     <img src="assets/gifs/foguete.gif" alt="" width="70px" data-aos="fade-up" />
     <div class="mx-1 my-1 text__bold" data-aos="fade-up">Propósito</div>
     <p class="mx-1 text__desc" data-aos="fade-up">
-      Nosso propósito, e fazer com que nossas tecnologias tragam resultados
-      para toda sociedade.
+      Nosso propósito é fazer com que nossas tecnologias tragam resultados para toda sociedade.
     </p>
   </div>
 
