--- a/src/app/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.html
+++ b/src/app/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.html
@@ -9,8 +9,8 @@
         O seu futuro está aqui.
       </p>
       <p class="text__default" data-aos="fade-up">
-        Faça parte desse time que só vem crescendo, <br>
-        estamos esperando por você.
+        Faça parte desse time que só vem crescendo. <br>
+        Estamos esperando por você!
       </p>
       <app-default-button
       [bigArrow]="true"
