--- a/src/app/modules/solutions/components/solutions-page-need-devs/solutions-page-need-devs.component.html
+++ b/src/app/modules/solutions/components/solutions-page-need-devs/solutions-page-need-devs.component.html
@@ -1,7 +1,7 @@
 <div class="pag__center d-flex section--first py-5">
   <img
   data-aos="fade-up"
-    src="assets/backgrounds/bg-solution.png"
+    src="assets/backgrounds/bg-solu-top.png"
     alt="bg-solutions"
     width="50%"
   />
@@ -13,7 +13,7 @@
     </h3>
     <p class="text__green-subtitle mt-5 " data-aos="fade-up">
       Montamos um time de acordo com sua
-      necessidade, seguindo a melhor forma
+      necessidade seguindo a melhor forma
       ágil de trabalhar.
     </p>
 
