--- a/src/app/modules/solutions/components/solutions-page-why-contract/solutions-page-why-contract.component.html
+++ b/src/app/modules/solutions/components/solutions-page-why-contract/solutions-page-why-contract.component.html
@@ -1,10 +1,9 @@
 <div class="pag__center d-flex section--fourth">
   <div class="aling__bot">
-    <p class="text__green-title" data-aos="fade-up">Por quê contratar pela AMG?</p>
+    <p class="text__green-title" data-aos="fade-up">Por que contratar pela AMG?</p>
     <p class="text__solution" data-aos="fade-up">
-      Somos profissionais especialista em sistema Agil na área de tecnologia.
-      Assim, você acelera o seu negócios de forma rápida, flexível e
-      confiável.
+      Somos profissionais especialistas na área de tecnologia.
+      Assim, você acelera o seu negócio de forma rápida, flexível e confiável.
     </p>
     <ul>
       <li class="text__solution" data-aos="fade-up">
@@ -12,7 +11,7 @@
         solucionar qualquer dificuldade.
       </li>
       <li class="text__solution" data-aos="fade-up">Serviço terceirizado sem vínculo empregatício.</li>
-      <li class="text__solution" data-aos="fade-up">Maior agilidade com o minimo de burocracia.</li>
+      <li class="text__solution" data-aos="fade-up">Maior agilidade com o mínimo de burocracia.</li>
       <li class="text__solution" data-aos="fade-up">Formamos equipes de acordo com sua necessidade.</li>
       <li class="text__solution" data-aos="fade-up">Custo fixo.</li>
     </ul>
