--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,3 +138,6 @@ html {
 }
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
