--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -1,5 +1,12 @@
 .menu{
-  background-color: black;
+  background-color: #D9D9D9;
+  span{
+    color:#587B52;
+    font-weight: 900;
+  }
+  img{
+    width: 50px;
+  }
 }
 
 nav{
@@ -60,5 +67,5 @@ nav{
         }
       }
     }
-  }
+     }
 }
