--- a/src/app/shared/components/default-carousel/default-carousel.component.html
+++ b/src/app/shared/components/default-carousel/default-carousel.component.html
@@ -1,26 +1,29 @@
-<div id="carouselExampleIndicators" class="carousel slide m-4" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../../../../assets/svg/rooms/sala-10.svg"  class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="../../../../assets/svg/rooms/Sala 6.png"  class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="../../../../assets/svg/rooms/Sala 7.png"  class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
+<ngb-carousel class="m-4">
+	<ng-template ngbSlide>
+		<div class="picsum-img-wrapper" *ngFor="let photo of carouselConfig.imageUrls let i = index">
+			<img class="d-block w-100" src="../../../../assets/svg/rooms/sala-10.svg"  alt="Random first slide" />
+		</div>
+		<div class="carousel-caption">
+			<h3>First slide label</h3>
+			<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+		</div>
+	</ng-template>
+	<!-- <ng-template ngbSlide>
+		<div class="picsum-img-wrapper">
+			<img class="d-block w-100" src="../../../../assets/svg/rooms/Sala 6.png" alt="Random second slide" />
+		</div>
+		<div class="carousel-caption">
+			<h3>Second slide label</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		</div>
+	</ng-template>
+	<ng-template ngbSlide>
+		<div class="picsum-img-wrapper">
+			<img class="d-block w-100" src="../../../../assets/svg/rooms/Sala 7.png" alt="Random third slide" />
+		</div>
+		<div class="carousel-caption">
+			<h3>Third slide label</h3>
+			<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+		</div>
+	</ng-template> -->
+</ngb-carousel>
