Correção de textos

--- a/src/app/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.html
+++ b/src/app/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.html
@@ -14,7 +14,7 @@
       </p>
       <app-default-button
       [bigArrow]="true"
-      label="Vagas disponíveis"
+      label="Envie seu currículo"
       classes="py-3 px-4"
       (click)="goToCurriculumEvent.emit()"
       labelFontSize="20px"></app-default-button>
