--- a/src/app/modules/home/components/home-page-sustainability/home-page-sustainability.component.html
+++ b/src/app/modules/home/components/home-page-sustainability/home-page-sustainability.component.html
@@ -12,8 +12,8 @@
           width="100%"
         />
         <p class="text__desc" data-aos="fade-up">
-          Redução de 80% no uso de copos descartáveis, uma vez que todos os
-          colaboradores utilizam o seu próprio copo para tomar água e café.
+          Conseguimos reduzir em até 70% no uso de copos descartáveis,
+          assim que todos os funcionários passaram a usar seus próprios copos para beber água e café.
         </p>
       </div>
 
@@ -26,9 +26,8 @@
           data-aos="fade-up"
         />
         <p class="text__desc" data-aos="fade-up">
-          Projetos sociais locais e nacionais, com apoio à ONGs, doações de
-          alimentos, ajuda de custo, disponibilização de sistema 100% gratuito
-          e ações em datas comemorativas, com diversas formas de doações.
+          Buscamos auxiliar seja no apoio à ONGs, com doações de alimentos e agasalhos,
+          ajuda de custo, e ações em datas comemorativas com diversos tipos de doações.
         </p>
       </div>
     </div>
