--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -12,7 +12,7 @@
 
   <div class="default-container menu--bottom d-flex justify-content-between">
         <div class="d-flex align-items-center">
-        <img class="py-2" src="assets/svg/LOGO 4.svg" data-aos="fade-up" alt="amg" routerLink="/home">
+        <img class="logo-4 py-2" src="assets/svg/LOGO 4.svg" data-aos="fade-up" (click)="defaultService.backToTop()" alt="amg" routerLink="/home">
         </div>
     <span class="d-flex text-center align-items-center" data-aos="fade-up">Todos os direitos reservados ANGULAR MONEY GROUP &copy; {{year}}.</span>
     <div class="py-2" style="width: 50px;"></div>
