--- a/src/app/modules/home/components/home-page-hiring/home-page-hiring.component.html
+++ b/src/app/modules/home/components/home-page-hiring/home-page-hiring.component.html
@@ -14,11 +14,10 @@
       </div>
       <div class="box__white m-0" data-aos="fade-up">
         <img src="assets/icons/Icon-call-2.svg" width="48px" data-aos="fade-up"/>
-        <p class="text__default mt-2" data-aos="fade-up">Feita de pessoas.</p>
+        <p class="text__default mt-2" data-aos="fade-up">Feito de pessoas para pessoas.</p>
         <p class="text__desc" data-aos="fade-up">
-          Se todos estiverem bem, com equilíbrio entre a vida pessoal e
-          profissional, criamos uma relação de proximidade em que todos saem
-          ganhando.
+          Quando todos estão bem, há equilíbrio entre vida pessoal e profissional,
+           criamos uma relação próxima onde todos ganham.
         </p>
       </div>
       <div class="box__white m-0" data-aos="fade-up">
