--- a/src/app/modules/solutions/components/solutions-page-why-choose/solutions-page-why-choose.component.html
+++ b/src/app/modules/solutions/components/solutions-page-why-choose/solutions-page-why-choose.component.html
@@ -15,7 +15,7 @@
     </h3>
     <p class="mt-1 text__solution" data-aos="fade-up">
       Seguir um modelo de trabalho mais utilizado hoje em desenvolvimento de
-      software na área de tecnologia, é a metodologia agil, seguindo o fluxo
+      software na área de tecnologia, é a metodologia ágil, seguindo o fluxo
       de serviço conforme a imagem. Na AMG, você define a sua equipe, conforme
       sua necessidade, temos especialistas para analisar todas as suas
       demandas e ajudar a definir quais e quantos profissionais forem
