--- a/src/app/modules/home/components/home-page-suggestion/home-page-suggestion.component.html
+++ b/src/app/modules/home/components/home-page-suggestion/home-page-suggestion.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex text-center justify-content-center flex-column w-100">
       <p class="text__green" data-aos="fade-up">Por meio do menu abaixo você pode fazer seu relato ou sua sugestão. </p>
       <p class="text__default h5" data-aos="fade-up">
-        Ainda, você pode utilizá-lo para obter mais informações, inclusive sobre a Contato Seguro, empresa que faz a gestão deste canal, garantindo seu anonimato.
+        Neste campo abaixo você pode nos enviar uma mensagem de forma anônima para fazer uma sugestão, reclamação ou relato. Caso queira contatar diretamente à empresa, utilize a aba de contato.
       </p>
       <div>
         <textarea name="" id="" cols="20" rows="10" maxlength="300" class="rounded w-100 bg-white" placeholder="Descreva aqui sua mensagem..." [(ngModel)]="message"></textarea>
