feat(AMG-006): ajustes nos menus das telas para retornar ao início quando clicar

--- a/src/app/modules/about/components/about-page/about-page.component.html
+++ b/src/app/modules/about/components/about-page/about-page.component.html
@@ -1,6 +1,8 @@
 <div class="pag">
   <div class="pag__center">
-    <p class="text__bold" data-aos="fade-up">início / sobre nós</p>
+    <p class="text__bold" data-aos="fade-up">
+      <span routerLink="/" (click)="defaultService.backToTop()" style="cursor: pointer;">início </span>
+      / sobre nós</p>
 
     <app-about-page-we></app-about-page-we>
 
