--- a/src/app/modules/solutions/components/solutions-page/solutions-page.component.html
+++ b/src/app/modules/solutions/components/solutions-page/solutions-page.component.html
@@ -1,5 +1,7 @@
 <div class="pag">
-  <h5 class="text__bold default-container" data-aos="fade-up">início / soluções</h5>
+  <h5 class="text__bold default-container" data-aos="fade-up">
+    <span routerLink="/" (click)="defaultService.backToTop()" style="cursor: pointer;">início </span>
+    / soluções</h5>
 
   <app-solutions-page-need-devs></app-solutions-page-need-devs>
 
