--- a/src/app/modules/contact/components/contact-page/contact-page.component.html
+++ b/src/app/modules/contact/components/contact-page/contact-page.component.html
@@ -1,5 +1,7 @@
 <div class="pt-3">
-  <p class="text__bold default-container" data-aos="fade-up">início / contato</p>
+  <p class="text__bold default-container" data-aos="fade-up">
+    <span routerLink="/" (click)="defaultService.backToTop()" style="cursor: pointer;">início </span>
+    / contato</p>
   <div class="default-container mx-auto py-5 d-flex content">
     <div class="w-50 content--form py-3">
       <h3 class="text__green" data-aos="fade-up">Contato</h3>
