--- a/src/app/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.html
+++ b/src/app/modules/hiring/components/hiring-page-initial/hiring-page-initial.component.html
@@ -1,6 +1,7 @@
 <div class="aling__top mb-5">
   <p class="text__bold mb-5 default-container" data-aos="fade-up">
-    início / trabalhe conosco
+    <span routerLink="/" (click)="defaultService.backToTop()" style="cursor: pointer;">início </span>
+    / trabalhe conosco
   </p>
 
   <div class="pag__center">
