--- a/src/app/modules/home/components/home-page-we-are/home-page-we-are.component.scss
+++ b/src/app/modules/home/components/home-page-we-are/home-page-we-are.component.scss
@@ -103,5 +103,13 @@
         }
     }
   }
+
+  .aling__center{
+    padding: 10% 0 5%;
+  }
+
+  .imagem{
+    margin: 10% auto 0 !important;
+  }
 }
 
