--- a/src/app/modules/solutions/components/solutions-page-your-projects/solutions-page-your-projects.component.scss
+++ b/src/app/modules/solutions/components/solutions-page-your-projects/solutions-page-your-projects.component.scss
@@ -64,4 +64,12 @@
   h3{
     max-width: 100% !important;
   }
+
+  .text__title{
+    font-size: 32px;
+  }
+
+  .aling__box {
+    padding: 15% 0;
+}
 }
