--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -14,7 +14,10 @@
         <div class="d-flex align-items-center">
         <img class="logo-4 py-2" src="assets/svg/LOGO 4.svg" data-aos="fade-up" (click)="defaultService.backToTop()" alt="amg" routerLink="/home">
         </div>
-    <span class="d-flex text-center align-items-center" data-aos="fade-up">Todos os direitos reservados ANGULAR MONEY GROUP &copy; {{year}}.</span>
-    <div class="py-2" style="width: 50px;"></div>
+        <a class="d-flex align-items-center" href="https://wa.me/5534991260050" target="_blank" >
+          <i class="fa-brands fa-whatsapp"></i>
+          <p class="phoneNumber">(34) 9 9126-0050</p>
+        </a>
+    <span class="d-flex text-center align-items-center" data-aos="fade-up">Todos os direitos reservados <br> ANGULAR MONEY GROUP &copy; {{year}}.</span>
   </div>
 </footer>
