--- a/src/app/modules/home/components/home-page-suggestion/home-page-suggestion.component.scss
+++ b/src/app/modules/home/components/home-page-suggestion/home-page-suggestion.component.scss
@@ -1,8 +1,26 @@
 textarea{
   height:110px;
   background: url('/assets/svg/two-envelops.svg') no-repeat scroll 7px 7px;
-  background-position: 1.5% 20%;
+  background-position: 1% 20%;
   padding-left:30px;
   padding: 15px 0px 0px 35px;
   resize: none;
+}
+
+@media (max-width:1024px){
+  textarea{
+    background-position: 0.9rem 20%;
+  }
+
+  .h5{
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+  .text__green {
+    font-size: 22px;
+  }
+
+  .pt-3{
+    align-self: center;
+  }
 }
